syntax = "proto3";
package r3l.oracle.v1beta1;

option go_package = "github.com/relevant-community/r3l/x/oracle/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

// Params represents the parameters used for by the slashing module.
message Params {
  repeated ClaimParams claim_params  = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"claim_params\""];
  bytes vote_threshold = 2 [
    (gogoproto.moretags)   = "yaml:\"vote_threshold\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// ClaimParams is the parameters set for each oracle claim type
message ClaimParams {
  int64 vote_period = 1 [(gogoproto.moretags) = "yaml:\"vote_period\""];
  string claim_type = 2  [(gogoproto.moretags) = "yaml:\"claim_type\""];
  bool prevote = 3  [(gogoproto.moretags) = "yaml:\"prevote\""];
}
